--- a/docs/lab/workflow/cancelling-an-order.mdx
+++ b/docs/lab/workflow/cancelling-an-order.mdx
@@ -21,7 +21,7 @@ When it comes to cancelling an order, to avoid the financial costs associated wi
 
 <SnippetGroup>
 
-```bash Cancelling an order
+```bash cURL
 curl --request DELETE \
      --url {{BASE_URL}}/v3/lab_test/<order_id>/cancel \
      --header 'Accept: application/json' \
@@ -29,12 +29,60 @@ curl --request DELETE \
      --header 'Content-Type: application/json' \
 ```
 
-```python
-data = client.Testkits.cancel(user_id=*)
+```python Python
+from vital import Client
+
+client = Client(
+  api_key=<API_KEY>,
+  environment="sandbox",
+  region="us"
+)
+
+data = client.LabTests.cancel_order(order_id='<order_id>');
 ```
 
-```js
-data = client.Testkits.cancel(user_id=*)
+```javascript Node
+import { VitalClient, VitalEnvironment } from '@tryvital/vital-node';
+
+const client = new VitalClient({
+    apiKey: '<my_api_key>',
+    environment: VitalEnvironment.Sandbox,
+});
+
+const data = await client.labTests.cancelOrder("<order_id>");
+```
+
+
+```java Java
+import com.vital.api.Vital;
+import com.vital.api.core.Environment;
+
+Vital vital = Vital.builder()
+        .apiKey("YOUR_API_KEY")
+        .environment(Environment.SANDBOX)
+        .build();
+
+var data = vital.labTests().cancelOrder("<order_id>");
+```
+
+```go Go
+import (
+  "context"
+
+  vital "github.com/tryVital/vital-go"
+  vitalclient "github.com/tryVital/vital-go/client"
+)
+
+client := vitalclient.NewClient(
+  vitalclient.WithApiKey("<YOUR_API_KEY>"),
+  vitalclient.WithBaseURL(vital.Environments.Sandbox),
+)
+
+response, err := client.LabTests.CancelOrder(context.TODO(), "<order_id>")
+if err != nil {
+  return err
+}
+fmt.Printf("Received data %s\n", response)
 ```
 
 </SnippetGroup>
