Fix incorrect hyperlink to Mobile SDK docs root

--- a/docs/api-details/authentication.mdx
+++ b/docs/api-details/authentication.mdx
@@ -26,7 +26,7 @@ curl --request GET
 
 ## Vital Mobile SDKs
 
-[Vital Mobile SDKs](http://localhost:3000/wearables/sdks/) supports two authentication methods:
+[Vital Mobile SDKs](/wearables/sdks/) supports two authentication methods:
 
 1. [Vital Sign-In Token](/wearables/sdks/authentication#vital-sign-in-token) — Recommended for production usage
 
