--- a/docs/lab/results/result-formats.mdx
+++ b/docs/lab/results/result-formats.mdx
@@ -2,11 +2,10 @@
 title: "Result Formats"
 ---
 
-Vital's API returns results in a number of different formats. We currently support:
+Vital's API returns results in two different formats.
 
 - `PDF`
 - `JSON`
-- `HL7`
 
 ## PDF Results
 
@@ -217,7 +216,3 @@ In order to obtain this data, you can use the following endpoints:
     This allows you to see all markers associated with a lab test and it's expected results.
 
 
-
-## HL7 Results
-
-We can also export results to HL7 on request. Please let us know if this is required by contacting support.
