[VIT-5176] Update sdk snippets with link methods

--- a/docs/api-reference/lab-testing/create-order.mdx
+++ b/docs/api-reference/lab-testing/create-order.mdx
@@ -30,8 +30,8 @@ data = client.lab_tests.create_order(
     ),
     patient_address=PatientAddressCompatible(
       receiver_name="john Doe",
-      street="123 Main St.",
-      street_number="Apt. 208",
+      first_line="123 Main St.",
+      second_line="Apt. 208",
       city="San Francisco",
       state="CA",
       zip="91189",
@@ -64,8 +64,8 @@ const request: CreateOrderRequestCompatible = {
     },
     patientAddress: {
       receiverName: "john Doe",
-      street: "123 Main St.",
-      streetNumber: "Apt. 208",
+      first_line: "123 Main St.",
+      second_line: "Apt. 208",
       city: "San Francisco",
       state: "CA",
       zip: "91189",
@@ -98,7 +98,7 @@ PatientDetails details = PatientDetails.builder()
 
 PatientAddressCompatible address = PatientAddressCompatible
       .builder()
-      .street("123 Main St.")
+      .first_line("123 Main St.")
       .city("San Francisco")
       .state("CA")
       .zip("91189")
@@ -141,8 +141,8 @@ details := &vital.PatientDetails{
 
 address := &vital.PatientAddressCompatible{
    ReceiverName: vital.String("john Doe"),
-   Street:       "123 Main St.",
-   StreetNumber: vital.String("Apt. 208"),
+   FirstLine:    "123 Main St.",
+   SecondLine:   vital.String("Apt. 208"),
    City:         "San Francisco",
    State:        "CA",
    Zip:          "91189",
