--- a/docs/wearables/connecting-providers/custom_widget.mdx
+++ b/docs/wearables/connecting-providers/custom_widget.mdx
@@ -41,16 +41,23 @@ import com.vital.api.core.Environment;
 import com.vital.api.resources.link.requests.LinkTokenExchange;
 
 Vital vital = Vital.builder()
-     .apiKey("YOUR_API_KEY")
-     .environment(Environment.SANDBOX)
-     .build();
+        .apiKey("YOUR_API_KEY")
+        .environment(Environment.SANDBOX)
+        .build();
 
 LinkTokenExchange request = LinkTokenExchange
-     .builder()
-     .userId("<user_id>")
-     .build();
+        .builder()
+        .userId("<user_id>")
+        .build();
 
-var data = vital.link().token(request);
+var token_response = vital.link().token(request);
+
+LinkGenerateOauthLinkRequest link_request = LinkGenerateOauthLinkRequest
+        .builder()
+        .vitalLinkToken(token_response.getLinkToken())
+        .build();
+
+var oauth = vital.link().generateOauthLink(OAuthProviders.OURA, link_request);
 ```
 
 ```go Go
@@ -210,11 +217,118 @@ Current OAuth providers are:
 | `iHealth`  | Blood pressure, Fitness scales, Glucometers & Fitness watches |
 | `Withings` | Fitness scales, watches and health monitors                   |
 
-```python Connecting a password provider:
-token = client.Link.create(user_id)
-oauth_url = client.Link.oauth_provider(link_token, "fitbit")
-# redirect user to returned oauth_url
+
+To connect an oauth provider:
+
+<SnippetGroup>
+
+```javascript Node
+import { VitalClient, VitalEnvironment } from '@tryvital/vital-node';
+import { LinkTokenExchange, LinkGenerateOauthLinkRequest, OAuthProviders } from '@tryvital/vital-node/api';
+
+
+const client = new VitalClient({
+    apiKey: '<my_api_key>',
+    environment: VitalEnvironment.Sandbox,
+});
+
+const request: LinkTokenExchange = {
+    userId: "<user_id>",
+}
+const tokenResponse = await client.link.token(request)
+
+const linkRequest: LinkGenerateOauthLinkRequest = {
+    vitalLinkToken: tokenResponse.linkToken,
+}
+
+const auth = await client.link.generateOauthLink(
+    OAuthProviders.<provider>,
+    linkRequest
+)
 ```
+
+```python Python
+from vital.client import Vital
+from vital.environment import VitalEnvironment
+from vital.types.o_auth_providers import OAuthProviders
+
+client = Vital(
+  api_key="YOUR_API_KEY",
+  environment=VitalEnvironment.SANDBOX
+)
+
+token_response = client.link.token(user_id="<user_id>")
+
+oauth = client.link.generate_oauth_link(
+  oauth_provider=OAuthProviders.<provider>,
+  vital_link_token=token_response.link_token,
+)
+```
+
+```java Java
+import com.vital.api.Vital;
+import com.vital.api.core.Environment;
+import com.vital.api.resources.link.requests.LinkGenerateOauthLinkRequest;
+import com.vital.api.resources.link.requests.LinkTokenExchange;
+import com.vital.api.types.OAuthProviders;
+
+Vital vital = Vital.builder()
+        .apiKey("YOUR_API_KEY")
+        .environment(Environment.SANDBOX)
+        .build();
+
+LinkTokenExchange request = LinkTokenExchange
+        .builder()
+        .userId("<user_id>")
+        .build();
+
+var token_response = vital.link().token(request);
+
+LinkGenerateOauthLinkRequest link_request = LinkGenerateOauthLinkRequest
+        .builder()
+        .vitalLinkToken(token_response.getLinkToken())
+        .build();
+
+var oauth = vital.link().generateOauthLink(OAuthProviders.OURA, link_request);
+```
+
+```go Go
+import (
+  "context"
+
+  vital "github.com/tryVital/vital-go"
+  vitalclient "github.com/tryVital/vital-go/client"
+)
+
+client := vitalclient.NewClient(
+  vitalclient.WithApiKey("<YOUR_API_KEY>"),
+  vitalclient.WithBaseURL(vital.Environments.Sandbox),
+)
+provider := vital.ProvidersOura
+request := &vital.LinkTokenExchange{
+  UserId:   "<user_id>",
+  Provider: &provider,
+}
+
+response, err := client.Link.Token(context.TODO(), request)
+
+if err != nil {
+  return err
+}
+
+generateLinkRequest := &vital.LinkGenerateOauthLinkRequest{
+  VitalLinkToken: response.LinkToken,
+}
+
+oauth, err := client.Link.GenerateOauthLink(context.TODO(), vital.OAuthProvidersOura, generateLinkRequest)
+
+if err != nil {
+  return err
+}
+fmt.Printf("Received data %s\n", oauth)
+```
+
+</SnippetGroup>
 
 For `OAuth` Providers we return an `oauth_url` that can be used to redirect users to. In a web view, on redirection, you should check the user has connected to the provider successfully. In the case of mobile, the user should receive a message to return to the app.
 
