[VIT-5197] Add omron to beta integrations

--- a/docs/wearables/providers/introduction.mdx
+++ b/docs/wearables/providers/introduction.mdx
@@ -59,6 +59,7 @@ We currently Support over 300+ devices, a full list can be seen below.
 | ---------------------------------------------------------------------- | ---------------- | ------------------------------------------ |
 | [Android Health Connect](https://developer.android.com/health-connect) | `health_connect` | Health and fitness data on Android devices |
 | [Kardia](https://kardia.com/)                                          | `kardia`         | Electrocardiogram readings                 |
+| [Omron](https://www.omron-healthcare.com) (Cloud)                      | `omron`          | Blood Pressure monitors and scales         |
 
 **Planned**: On our roadmap
 
