Update feature availability callouts

--- a/docs/api-details/custom-encryption-keys.mdx
+++ b/docs/api-details/custom-encryption-keys.mdx
@@ -3,9 +3,10 @@ title: 'Customer Managed Encryption Keys'
 ---
 
 <Info>
-To use this offering, you will need:
-- An Enterprise tier Vital subscription
-- A Google Cloud Platform (GCP) Project
+CMEK is available for [the Scale plan](https://tryvital.io/pricing).
+</Info>
+<Info>
+A Google Cloud Platform (GCP) project is required to manage your CMEK.
 </Info>
 
 
