--- a/docs/wearables/connecting-providers/bring_your_own_oauth.mdx
+++ b/docs/wearables/connecting-providers/bring_your_own_oauth.mdx
@@ -2,6 +2,10 @@
 title: "Bring Your Own OAuth"
 ---
 
+<Info>
+Bring Your Own OAuth is available for [the Grow and Scale plans](https://tryvital.io/pricing).
+</Info>
+
 Vital supports bringing your own OAuth application credentials, so that your user would see the OAuth consent flow
 in your own brand when they connect to cloud-based OAuth providers.
 
