--- a/docs/wearables/vital-app/introduction.mdx
+++ b/docs/wearables/vital-app/introduction.mdx
@@ -2,6 +2,10 @@
 title: "Introduction"
 ---
 
+<Info>
+Vital Connect iOS app is available for [the Grow and Scale plans](https://tryvital.io/pricing).
+</Info>
+
 <Note>
   The app is available on the App Store, and you can download it
   [here](https://apps.apple.com/us/app/vital-connect/6444167196).
