--- a/docs/webhooks/etl-pipelines.mdx
+++ b/docs/webhooks/etl-pipelines.mdx
@@ -3,7 +3,7 @@ title: "ETL Pipelines"
 ---
 
 <Info>
-ETL pipeline integration is available to [Enterprise customers](https://tryvital.io/pricing).
+ETL Pipelines integration is available for [the Scale plan](https://tryvital.io/pricing).
 </Info>
 
 [Events](/webhooks/introduction) can be published directly to a supported message queue source of
