--- a/docs/wearables/guides/freestyle.mdx
+++ b/docs/wearables/guides/freestyle.mdx
@@ -36,22 +36,22 @@ Freestyle Libre is available in different regions, ensure you invite the correct
 
 **Vital US Region**
 
-| Freestyle Region                               | Sandbox Email                  | Production Emai;       |
-| ---------------------------------------------- | ------------------------------ | ---------------------- |
-| United States (`us`) \*                        | support+sandbox+us@tryvital.io | support+us@tryvital.io |
-| Canada (`ca`)                                  | support+sandbox+ca@tryvital.io | support+ca@tryvital.io |
+| Freestyle Region                               | 
+| ---------------------------------------------- | 
+| United States (`us`) \*                        | 
+| Canada (`ca`)                                  | 
 | _(\*) Default Freestyle region if unspecified_ |
 
 **Vital EU Region**
 
-| Freestyle Region                               | Sandbox Email                  | Production Email            |
-| ---------------------------------------------- | ------------------------------ | --------------------------- |
-| Europe (`eu`) \*                               | support+sandbox@tryvital.io    | support@tryvital.io         |
-| Singapore (`sg`)                               | support+sg+sandbox@tryvital.io | support+sg+prod@tryvital.io |
-| Australia (`au`)                               | support+au+sandbox@tryvital.io | support+au@tryvital.io      |
-| Germany (`de`)                                 | support+de+sandbox@tryvital.io | support+de@tryvital.io      |
-| Netherlands (`nl`)                             | support+nl+sandbox@tryvital.io | support+nl@tryvital.io      |
-| Brazil (`br`)                                  | support+br+sandbox@tryvital.io | support+br@tryvital.io      |
+| Freestyle Region                               | 
+| ---------------------------------------------- | 
+| Europe (`eu`) \*                               | 
+| Singapore (`sg`)                               | 
+| Australia (`au`)                               | 
+| Germany (`de`)                                 | 
+| Netherlands (`nl`)                             | 
+| Brazil (`br`)                                  | 
 | _(\*) Default Freestyle region if unspecified_ |
 
 ### Vital Practices
