--- a/docs/api-reference/link/link-email-provider.mdx
+++ b/docs/api-reference/link/link-email-provider.mdx
@@ -21,7 +21,7 @@ curl --request POST \
 
 ```javascript Node
 import { VitalClient, VitalEnvironment } from '@tryvital/vital-node';
-import { EmailProviderAuthLink } from '@tryvital/vital-node/api';
+import { EmailProviderAuthLink, LinkTokenExchange } from '@tryvital/vital-node/api';
 
 
 const client = new VitalClient({
@@ -29,10 +29,21 @@ const client = new VitalClient({
     environment: VitalEnvironment.Sandbox,
 });
 
-const request: EmailProviderAuthLink = {
-    email: "<email>",
+const request: LinkTokenExchange = {
+    userId: "<user_id>",
 }
-const data = await client.link.connectEmailAuthProvider("<provider>", request);
+const tokenResponse = await client.link.token(request)
+
+const linkRequest: EmailProviderAuthLink = {
+    vitalLinkToken: tokenResponse.linkToken,
+    email: "<email>",
+    region: Region.<region>
+}
+
+const connectEmailResponse = await client.link.connectEmailAuthProvider(
+    "freestyle_libre",
+    linkRequest
+)
 ```
 
 ```python Python
@@ -44,7 +55,13 @@ client = Vital(
   environment=VitalEnvironment.SANDBOX
 )
 
-data = client.link.connect_email_auth_provider(provider="<provider>", email="<email>")
+token_response = client.link.token(user_id="<user_id>")
+
+linkResponse = client.link.connect_email_auth_provider(
+  provider="freestyle_libre", 
+  email="<email>", 
+  vital_link_token=token_response.link_token
+)
 ```
 
 ```java Java
@@ -57,8 +74,16 @@ Vital vital = Vital.builder()
         .environment(Environment.SANDBOX)
         .build();
 
+LinkTokenExchange request = LinkTokenExchange
+        .builder()
+        .userId("<user_id>")
+        .build();
+
+var tokenResponse = vital.link().token(request);
+
 EmailProviderAuthLink request = EmailProviderAuthLink
         .builder()
+        .vitalLinkToken(tokenResponse.getLinkToken())
         .email("<email>")
         .build();
 
@@ -77,15 +102,29 @@ client := vitalclient.NewClient(
   vitalclient.WithApiKey("<YOUR_API_KEY>"),
   vitalclient.WithBaseURL(vital.Environments.Sandbox),
 )
-request := &vital.EmailProviderAuthLink{
-  Email: "<email>",
+
+provider := vital.ProvidersOura
+request := &vital.LinkTokenExchange{
+  UserId:   "<user_id>",
+  Provider: &provider,
 }
 
-response, err := client.Link.ConnectEmailAuthProvider(context.TODO(), "<provider>", request)
+response, err := client.Link.Token(context.TODO(), request)
+
 if err != nil {
   return err
 }
-fmt.Printf("Received data %s\n", response)
+
+emailAuthRequest := &vital.EmailProviderAuthLink{
+  VitalLinkToken: response.LinkToken,
+  Email:          "<email>",
+}
+
+emailAuth, err := client.Link.ConnectEmailAuthProvider(context.TODO(), "freestyle_libre", emailAuthRequest)
+if err != nil {
+  return err
+}
+fmt.Printf("Received data %s\n", emailAuth)
 ```
 
 </RequestExample>
